# cpp-template

./: .gitignore  CMakeLists.txt
lib/whereami-master/src/: whereami.c
src/: main.cpp
src/util/: fs.cpp  fs.hpp  logger.cpp  logger.hpp
